  font (which is mapped to "\(ul" and is used to draw horizontal lines)
  are now dynamically adjusted in the generated PostScript code. This
  works around varying metrics of this character in different versions
  of the Symbol font. Note that this does not work in PDF unless the
  font is embedded at the time the document is distilled.
* dpost: The "post" device works again; dpost previously crashed with a
  null pointer dereference when it was used.
* [nt]roff: No "illegal number" warning is printed anymore when a "\}" is
  found as part of a possibly numeric argument, as in e.g. ".bp \}".
* [nt]roff: The ".mc" request does not require an argument so no warning
  is printed if it is given none.
* dpost: When a PDFMark Bookmark command is issued at the beginning of
  a page of intermediate output before any text has been printed, the
  value "4" is now substracted automatically to make the PDF viewer
  show the whole page top including margin.
* -mm macros: An error that was introduced when the macros were converted
  to use spaces between a request name and its arguments has been fixed.
  It sometimes caused the page offset to be wrong.

Release 060221
* [nt]roff: With the ".hylang" request, the individual parts of words
  composed by "-" or "\(em" characters are now subject to hyphenation.
* troff: The ".fspacewidth" request has been introduced to set the width
  of the space character of a font.
* troff: For monospaced fonts, the space width is now set to the size of
  the "space" character in the AFM/TrueType/OpenType font metrics. This
  matches the traditional behavior of the "post" device with the "Courier"
  font, but was previously not done for "ps", which led to incorrect
  formatting.
* troff: Non-ASCII small characters were erroneously mapped to uppercase
  input characters. They are now mapped to lowercase input characters as
  it is done for ASCII characters.
* troff: When a regular font was chosen as fallback for an expert font,